# fuzzy-sentences-clustering

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  requirements.txt
phrases-fuzzy-clusters/: pyproject.toml
phrases-fuzzy-clusters/phrases_fuzzy_clusters/: phrases_fuzzy_clusters.py
phrases-fuzzy-clusters/tests/: test_phrases_fuzzy_clusters.py
src/: README.md  README.rst  pyproject.toml  requirements.txt
src/fuzzy_sentences_clustering/: __init__.py  fuzzy_sentences_clustering.py
src/phrases_fuzzy_clusters/: __init__.py  phrases_fuzzy_clusters.py
src/tests/: test_fuzzy_sentences_clustering.py  test_phrases_fuzzy_clusters.py
