[tool.poetry]
name = "fuzzy-sentences-clustering"
version = "0.0.0"
description = "Clustering similar sentences based on their fuzzy similarity."
authors = ["Cloves Paiva <clovesgtx@gmail.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/SClovesgtx/fuzzy-sentences-clustering"
repository = "https://github.com/SClovesgtx/fuzzy-sentences-clustering"
keywords = ["clusterization", "fuzzy", "similarity", "text"]

classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Operating System :: OS Independent",
    ]

[tool.poetry.dependencies]
python = "^3.8"
nltk = "3.7"
fuzzywuzzy = "0.18.0"
python-Levenshtein-wheels = "0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyinstrument = "4.2.0"
black = "22.3.0"
bandit = "1.7.4"
radon = "5.1.0"


[build-system]
requires = [
    "poetry-core>=1.0.0",
    "nltk==3.7",
    "fuzzywuzzy==0.18.0",
    "python-Levenshtein-wheels==0.13.2",
]
build-backend = "poetry.core.masonry.api"
